Fix suggestion0 in counters vertical alignement and make arrow transparent

--- a/lol-analysis/src/app/components/counter/counter.component.css
+++ b/lol-analysis/src/app/components/counter/counter.component.css
@@ -1,3 +1,12 @@
 div.card:hover { 
     background-color: rgb(76, 76, 76);
 }
+.block {
+    height: 160px;
+}
+.block2:before {
+content: "";
+display: inline-block;
+vertical-align: middle;
+height: 100%;
+}
